client/css/main.css
/* Animations */
@keyframes show {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
@keyframes hide {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}
.blendOut {
    animation: hide .2s;
    animation-fill-mode: both;
}
.blendIn {
    animation:show .2s;
    animation-fill-mode:both
}
.invisvible {
    visibility: hidden;
}

/*---*/
@media screen and (min-device-pixel-ratio: 3/2) {
    body {
        font-size: 1.5em;
    }
}

* {
    box-sizing: border-box;
}
body {
    width: 100vmin;
    margin: 0 auto;
    overflow: hidden;
    font-size: 1.5em;
    font-family: sans-serif;
    }
label {
    margin-right: .2em;
}
button {
    background-color: rgba(0, 0, 0, 0.65);
    color: white;
    font-size: .7em;
    border:none;
    width: 100%;
}
button > span {
    font-size: 3em;
}
button, #stats {
    opacity: 0;
    transition: opacity 250ms ease-in-out;
}
#countdown {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    padding: 2vh;
    font-size: 4vh;
    text-align: center;
    background-color: rgba(77, 77, 77, 0.89);
    color: white;
    z-index: 255;
}

#goodAttempts > label {
    color: #20BF55;
}
#badAttempts > label {
    color: #FF366C;
}

#stats {
    padding: .5em 0;
    font-size: 5vh;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: 0 auto;
    max-height: 10vh;
}
#board { 
    height: 90vh;
    display: flex;
    flex-wrap:wrap;
    align-content: flex-start;
}
@media screen and (min-aspect-ratio: 7/10) {
    body {
        width: 70vh;
        margin: auto;
    }
    #theMiddle {width: 70vh !important;}
}
#theMiddle {
    width: 90%;
    height: 10px;
    z-index: -100;
    position: absolute;
    bottom: 23vh;
    left: 0;
    right: 0;
    margin: 0 auto;
}
#splashScreen {
    display: none;
    max-width: 800px;
    text-align: center;
    margin-top: 10vh;
}
#splashScreen a {
    position: fixed;
    bottom: 50px;
    left: 0;
    right: 0;
    margin: 0 auto;
}
#splashScreen .points {
    margin: 15px;
    font-size: 2em;
}
.points {
    color: #00A6FF;
}
.goodAttempts {
    color: #20BF55;
}
.badAttempts {
    color: #FF366C;
}
.gameOver {
    margin-bottom: 1em;
}

/*Override*/
.chardinjs-tooltip {
    max-width: 400px;
    font-size: initial;
}
.chardinjs-tooltiptext {
    padding: 0 1em;
}
.chardinjs-tooltip.chardinjs-bottom:before {display: none;}
.chardinjs-tooltip.chardinjs-bottom {margin: 0;}

.card {
    display: flex;
    justify-content: center;
    align-content: center;
    flex-basis: 25%;
    height: 22vh;
    padding: 2px;
}
.card > .content.selected  {
    transform: scale(0.8);
}

.card > .content {
    border: 1px solid rgba(0,0,0,0.2);
    border-radius: 3px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    padding: .5vh 0;
    width: 100%;
    transition: all 200ms ease-in-out;
}

svg { width: 38% }
svg * { stroke-width: 3; }
svg circle.symbol {
    r: 47%;
    cx: 50%;
    cy: 50%;
}
svg rect.symbol {
    width: 94% !important;
    height: 94% !important;
    x: 3%;
    y: 3%;
}
svg polygon.symbol {}
svg > .lines { stroke-opacity: 1; }
svg > .lines.green { fill: url(#diagonal-stripes-green) !important; }
svg > .lines.red { fill: url(#diagonal-stripes-red) !important; }
svg > .lines.blue { fill: url(#diagonal-stripes-blue) !important; }
svg > .full {
    fill-opacity: 1;
    stroke-opacity: 1;
}
svg > .none {
    fill-opacity: 0;
    stroke-opacity: 1;
}
svg .blue { fill: rgb(0, 166, 255); stroke: rgb(0, 166, 255); }
svg .red { fill: rgb(255, 54, 108); stroke: rgb(255, 54, 108); }
svg .green { fill: rgb(32, 191, 85); stroke: rgb(32, 191, 85); }
svg pattern path { stroke-width: 2; }
/*svg pattern rectangle {
    width: 10;
    height: 10;
    fill: white;
}*/

